--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -133,3 +133,49 @@ p{background-color: aqua}
 .grafica{background-color: rgba(31, 111, 65, 0.42)}
 
 */
+
+#button_wrapper {
+    width: auto;
+    border: 1px solid black;
+    overflow: hidden; /* will contain if #first is longer than #second */
+    margin-bottom: 0px;
+}
+
+.btn {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 1;
+  -moz-border-radius: 1;
+    
+  border-radius: 10px;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 7px 20px 7px 20px; 
+  float:left;    
+  margin-right: 15px; 
+  margin-bottom: 0px;
+}
+
+.btn:focus {outline:0;}
+/*
+.btn:hover {  
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+}
+*/
+.btn:hover {  
+  background: #fd703c;
+  background-image: -webkit-linear-gradient(top, #fd703c, #ea6838);
+  background-image: -moz-linear-gradient(top, #fd703c, #ea6838);
+  background-image: -ms-linear-gradient(top, #fd703c, #ea6838);
+  background-image: -o-linear-gradient(top, #fd703c, #ea6838);
+  background-image: linear-gradient(to bottom, #fd703c, #ea6838);
+}
