--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -103,8 +103,9 @@ header {
 .grafica{
     /* background-color: rgba(31, 111, 65, 0.42); 
     border: 1px solid red;
+    
+    border: 1px solid green;
     */
-    /*border: 1px solid green;*/
 }
 
 #wrapper {
@@ -138,8 +139,9 @@ p{background-color: aqua}
     width: auto;
     /*border: 1px solid black;*/
     overflow: hidden; /* will contain if #first is longer than #second */
-    margin-bottom: 0px;
+    margin-bottom: 15px;
 }
+.btn:focus {outline:0;}
 
 .btn {
   background: #3498db;
@@ -160,17 +162,6 @@ p{background-color: aqua}
   margin-bottom: 0px;
 }
 
-.btn:focus {outline:0;}
-/*
-.btn:hover {  
-  background: #3cb0fd;
-  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
-}
-*/
 .btn:hover {  
   background: #fd703c;
   background-image: -webkit-linear-gradient(top, #fd703c, #ea6838);
@@ -178,4 +169,13 @@ p{background-color: aqua}
   background-image: -ms-linear-gradient(top, #fd703c, #ea6838);
   background-image: -o-linear-gradient(top, #fd703c, #ea6838);
   background-image: linear-gradient(to bottom, #fd703c, #ea6838);
+}
+
+.hr{
+    width:100%;
+    color:#555;    
+}
+
+li{
+    margin-left: 30px;
 }
